# en-learner

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  skills-lock.json  turbo.json
apps/backend/: Cargo.toml  Dockerfile  package.json
apps/backend/src/: app.rs  clock.rs  config.rs  error.rs  main.rs
apps/backend/src/api/: auth.rs  dashboard.rs  history.rs  mod.rs  review.rs  routes.rs  sets.rs  settings.rs  words.rs
apps/backend/src/db/: mod.rs
apps/backend/src/db/migrations/: 001_initial.sql  002_review.sql  003_stats.sql  004_review_log_sessions.sql  005_public_test_links.sql  006_auth.sql  007_shared_test_decks.sql
apps/backend/src/models/: mod.rs
apps/backend/src/services/: dictionary.rs  mod.rs  review_engine.rs  translator.rs  word_repo.rs
apps/desktop/: CMakeLists.txt
apps/desktop/scripts/: download_deps.sh
apps/desktop/src/: main.cpp
apps/desktop/src/desktop/: application.cpp  application.h  bridge.cpp  bridge.h  env.cpp  env.h  frontend_server.cpp  frontend_server.h  network.cpp  network.h  platform.cpp  platform.h  runtime.cpp  runtime.h  storage.cpp  storage.h  types.h
apps/frontend/: eslint.config.js  index.html  package.json  tailwind.config.ts  vite.config.ts
apps/frontend/src/: App.tsx  index.css  main.tsx  runtime-config.d.ts
apps/frontend/src/api/: auth.ts  client.ts  dashboard.ts  dictionary.ts  history.ts  review.ts  sets.ts  settings.ts
apps/frontend/src/components/dashboard/: DashboardOverview.tsx  dashboard-overview-model.ts
apps/frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
apps/frontend/src/components/sets/: ShareSetButton.tsx
apps/frontend/src/components/ui/: Badge.tsx  Button.tsx  EmptyState.tsx  Input.tsx  Modal.tsx  Skeleton.tsx  Spinner.tsx  Tooltip.tsx  index.ts
apps/frontend/src/components/word/: AddToSetModal.tsx  AudioButton.tsx  MeaningsSection.tsx  RelearnWordModal.tsx  WordDetailPanel.tsx  WordHeader.tsx
apps/frontend/src/lib/: dashboard-sync.ts  runtime-state.ts
apps/frontend/src/lib/local-core/: index.ts  review-engine.ts
apps/frontend/src/native/: desktop.ts
apps/frontend/src/pages/: Auth.tsx  Dashboard.tsx  History.tsx  PublicTest.tsx  Review.tsx  SavedWords.tsx  Search.tsx  SetDetails.tsx  Sets.tsx  Settings.tsx  WordDetails.tsx
apps/frontend/src/store/: index.ts
apps/frontend/src/types/: index.ts
apps/frontend/src/utils/: public-links.ts
scripts/: desktop-dev.sh
