[package]
name = "en-learner-backend"
version = "0.1.0"
edition = "2021"
description = "en-learner local backend service"

[[bin]]
name = "en-learner-backend"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
async-trait = "0.1"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
